# first_rust_project

./: .gitignore  Cargo.toml  README.md  curlGetAll.sh  curlPost.sh  index.html
src/: cron.rs  files.rs  keys.rs  lib.rs  main.rs  rest.rs  server.rs  wss.rs
src/server/: db.rs  keygen.rs  rest.rs  wss.rs
