[package]
name = "first_rust_project"
version = "0.1.0"
edition = "2021"
authors = ["Michael Vengerovich"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="lib"
path="src/lib.rs"

[dependencies]
ring = "*"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.0"
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-cron-scheduler = "*"
warp = {version="*", features = ["tls"]}
futures = "*"
rcgen = "*"
persy = "*"
rustc-serialize = "0.3"